Changed connection pool and database version and user password - 123

--- a/servlet/pom.xml
+++ b/servlet/pom.xml
@@ -61,16 +61,16 @@
 		</dependency>
 
 		<dependency>
-			<groupId>c3p0</groupId>
-			<artifactId>c3p0</artifactId>
-			<version>0.9.1.2</version>
+			<groupId>org.apache.tomcat</groupId>
+			<artifactId>tomcat-jdbc</artifactId>
+			<version>8.0.8</version>
 			<scope>compile</scope>
 		</dependency>
 
 		<dependency>
-			<groupId>postgresql</groupId>
+			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
-			<version>9.0-801.jdbc4</version>
+			<version>9.3-1101-jdbc4</version>
 			<scope>compile</scope>
 		</dependency>
 
